# strategic-relevance-agent

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: events.sample.json  intents.sample.json  score.request.sample.json
src/strategic_relevance/: __init__.py  api.py  bm25.py  cli.py  config.py  embeddings.py  env.py  models.py  scorer.py  sparse.py  storage.py  text.py
tests/: test_basic.py
