[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic-relevance-agent"
version = "0.1.0"
description = "Strategic relevance scoring agent (keyword + BM25 + optional embeddings) for market intelligence events."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [{name = "Hackathon Team"}]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
sr-agent = "strategic_relevance.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
